app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <APP_NAME>
  labels:
    app: <APP_NAME>
spec:
  replicas: 3
  selector:
    matchLabels:
      app: <APP_NAME>
  template:
    metadata:
      labels:
        app: <APP_NAME>
    spec:
      containers:
      - name: <APP_NAME>
        image: <IMAGE_NAME>
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: <SERVICE_NAME>
spec:
  selector:
    app: <APP_NAME>
  ports:
    - protocol: TCP
      port: 80
