oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always   
        args:
        - --provider=azure
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180        
        - --scope="openid offline_access"
        - --set-authorization-header=true
        - --set-xauthrequest=true
        - --pass-access-token=true
        - --pass-authorization-header=true
        - --pass-user-headers=true
        - --pass-host-header=true
        - --whitelist-domain=<PARENT_OF_THE_APP_DOMAIN_WITH_PREFIX_DOT>
        - --skip-jwt-bearer-tokens=true
        - --extra-jwt-issuers=https://sts.windows.net/<TENANT_ID>/=<CLIENT_ID>
        ports:
        - containerPort: 4180
          protocol: TCP
        resources:
          limits:
            memory: "300Mi"
            cpu: "0.2"     
        volumeMounts:
        - name: email-config-volume
          mountPath: /etc/oauth2-proxy/emails.txt
          subPath: emails.txt               
      volumes:
        - name: email-config-volume
          configMap:
            name: oauth-allowed-emails

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
